# HomeDetector

./: .editorconfig  .gitignore  AGENTS.md  Dockerfile  LICENSE.md  README.md  SECURITY.md  apparmor.txt  build.yaml  config.yaml  pyproject.toml  run.sh  tox.ini
.github/: AI_POLICY.md  CONTRIBUTING.md  docker-image.yml
.github/codeql/: codeql-config.yml  codeql-filter.py
.github/workflows/: codeql.yml  docker-image.yml  test-build.yml  test-python.yml
admin/: requirements.txt  web.py
admin/static/: index.html
admin/templates/: admin.j2  base.j2  dns.j2  tuning.j2
dns/: listener.py  requirements.txt
dns-fw/: listener.py  requirements.txt
docs/: CODEQL_SUPPRESSION.md  INSTALL.md  automation_delayed_start.yml  automation_webhook_notify.yml
homedetector/: Dockerfile  build.yml  config.yaml
homedetector/admin/: requirements.txt
homedetector/admin/templates/: dns.j2  tuning.j2
homedetector/dns/: requirements.txt
homedetector/opencanary/: requirements.txt
opencanary/: default.conf  opencanary.conf  requirements.txt
tests/: build.sh
tests/admin/: requirements.txt  test_web.py
tests/dns/: test_listener.py
translations/: en.yaml
